# test

./: .travis.yml  CMakeLists.txt  a.out  main.cpp
_build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  check  cmake_install.cmake
_build/Testing/Temporary/: CTestCostData.txt
tests/: test.cpp
